# Prediction-Markets-Trading-Bot-Toolkits

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  config.json  config.yaml.example
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy-landing.yml
landing/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
landing/src/: App.tsx  bots.ts  i18n.tsx  index.css  main.tsx  messages.tsx
landing/src/components/: BotCard.tsx  BotsSection.tsx  CtaSection.tsx  EngineSection.tsx  Footer.tsx  Hero.tsx  LiveSignalSection.tsx  Nav.tsx  SafetySection.tsx
src/: client.rs  config.rs  lib.rs  main.rs  models.rs  orders.rs  processor.rs  utils.rs
src/bot/: arbitrage.rs  copy_trading.rs  cross_market_arb.rs  direction_hunting.rs  market_maker.rs  mod.rs  orderbook_imbalance.rs  resolution_sniper.rs  sniper.rs  sports_execution.rs  spread_farming.rs  whale_signal.rs
src/config/: coin.rs  mod.rs  settings.rs
src/service/: client.rs  clob.rs  eligibility.rs  market_cache.rs  midprice.rs  mod.rs  onchain.rs  order_executor.rs  orders.rs  parse.rs  position_monitor.rs  position_store.rs  positions.rs  price_feed.rs  processor.rs  risk_guard.rs  strategy.rs  trader.rs
src/ui/: layout.rs  mod.rs
src/ui/components/: list.rs  logs.rs  mod.rs
src/utils/: client.rs  keyboard.rs  mod.rs  orderbook.rs  risk_guard.rs
src/venues/: mod.rs
src/venues/kalshi/: client.rs  mod.rs
src/venues/limitless/: client.rs  mod.rs
src/venues/polymarket/: mod.rs
