[package]
name = "polymarket-toolkits"
version = "1.0.0"
description = "Toolkits for Polymarket"
author = ["10xAngel <10xAngel.dev@gmail.com>"]
license = "MIT"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]
name = "polymarket_toolkits"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
custom-heap = []

[dependencies]
anyhow = "1"
base64 = "0.22"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "time", "macros"] }
chrono = "0.4.43"

# UI
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"

# Polymarket Client SDK
polymarket-client-sdk = { version = "0.4.2", features = ["ws", "data", "clob"] }

# Alloy for signers
alloy = { version = "1.5.2", features = ["signer-local", "signers"] }
