[package]
name = "polymarket-toolkits"
version = "1.0.0"
description = "Toolkits for Polymarket"
author = ["10xAngel <10xAngel.dev@gmail.com>"]
license = "MIT"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]
name = "polymarket_toolkits"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
custom-heap = []

[dependencies]
anyhow = "1"
base64 = "0.22"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "time", "macros"] }
chrono = "0.4.43"
rand = "0.10.0"
rustc-hash = "2.1.1"
serde_json = "1.0.149"
serde = "1.0.228"
reqwest = "0.13.2"
sha2 = "0.10.9"
itoa = "1.0.17"
once_cell = "1.21.3"
hmac = "0.12.1"
serde_yaml = "0.9.34"
futures = "0.3.32"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
memchr = "2.8.0"
clap = "4.5.59"

# UI
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"

# Polymarket Client SDK
polymarket-client-sdk = { version = "0.4.2", features = ["ws", "data", "clob"] }

# Alloy for signers
alloy = { version = "1.5.2", features = ["signer-local", "signers", "dyn-abi", "eip712"] }
